--- a/01-deploy-tekton/02-tekton-dashboard-release.yaml
+++ b/01-deploy-tekton/02-tekton-dashboard-release.yaml
@@ -97,7 +97,6 @@ rules:
       - tekton.dev
     resources:
       - clustertasks
-      - clustertasks/status
     verbs:
       - get
       - list
@@ -111,43 +110,6 @@ rules:
       - get
       - list
       - watch
-  - apiGroups:
-      - ""
-    resources:
-      - serviceaccounts
-    verbs:
-      - get
-      - list
-      - watch
-  - apiGroups:
-      - dashboard.tekton.dev
-    resources:
-      - extensions
-    verbs:
-      - create
-      - update
-      - delete
-      - patch
-  - apiGroups:
-      - tekton.dev
-    resources:
-      - clustertasks
-      - clustertasks/status
-    verbs:
-      - create
-      - update
-      - delete
-      - patch
-  - apiGroups:
-      - triggers.tekton.dev
-    resources:
-      - clusterinterceptors
-      - clustertriggerbindings
-    verbs:
-      - create
-      - update
-      - delete
-      - patch
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
@@ -184,14 +146,7 @@ rules:
       - taskruns
       - pipelines
       - pipelineruns
-      - pipelineresources
-      - conditions
-      - tasks/status
-      - taskruns/status
-      - pipelines/status
-      - pipelineruns/status
-      - taskruns/finalizers
-      - pipelineruns/finalizers
+      - customruns
     verbs:
       - get
       - list
@@ -200,6 +155,7 @@ rules:
       - triggers.tekton.dev
     resources:
       - eventlisteners
+      - interceptors
       - triggerbindings
       - triggers
       - triggertemplates
@@ -207,38 +163,6 @@ rules:
       - get
       - list
       - watch
-  - apiGroups:
-      - tekton.dev
-    resources:
-      - tasks
-      - taskruns
-      - pipelines
-      - pipelineruns
-      - pipelineresources
-      - conditions
-      - taskruns/finalizers
-      - pipelineruns/finalizers
-      - tasks/status
-      - taskruns/status
-      - pipelines/status
-      - pipelineruns/status
-    verbs:
-      - create
-      - update
-      - delete
-      - patch
-  - apiGroups:
-      - triggers.tekton.dev
-    resources:
-      - eventlisteners
-      - triggerbindings
-      - triggers
-      - triggertemplates
-    verbs:
-      - create
-      - update
-      - delete
-      - patch
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
@@ -264,6 +188,7 @@ metadata:
     app.kubernetes.io/component: dashboard
     app.kubernetes.io/instance: default
     app.kubernetes.io/part-of: tekton-dashboard
+    rbac.dashboard.tekton.dev/subject: tekton-dashboard
   name: tekton-dashboard-backend
 roleRef:
   apiGroup: rbac.authorization.k8s.io
@@ -276,7 +201,7 @@ subjects:
 ---
 apiVersion: v1
 data:
-  version: v0.24.1
+  version: v0.40.1
 kind: ConfigMap
 metadata:
   labels:
@@ -294,9 +219,9 @@ metadata:
     app.kubernetes.io/instance: default
     app.kubernetes.io/name: dashboard
     app.kubernetes.io/part-of: tekton-dashboard
-    app.kubernetes.io/version: v0.24.1
-    dashboard.tekton.dev/release: v0.24.1
-    version: v0.24.1
+    app.kubernetes.io/version: v0.40.1
+    dashboard.tekton.dev/release: v0.40.1
+    version: v0.40.1
   name: tekton-dashboard
   namespace: tekton-pipelines
 spec:
@@ -320,9 +245,9 @@ metadata:
     app.kubernetes.io/instance: default
     app.kubernetes.io/name: dashboard
     app.kubernetes.io/part-of: tekton-dashboard
-    app.kubernetes.io/version: v0.24.1
-    dashboard.tekton.dev/release: v0.24.1
-    version: v0.24.1
+    app.kubernetes.io/version: v0.40.1
+    dashboard.tekton.dev/release: v0.40.1
+    version: v0.40.1
   name: tekton-dashboard
   namespace: tekton-pipelines
 spec:
@@ -341,7 +266,7 @@ spec:
         app.kubernetes.io/instance: default
         app.kubernetes.io/name: dashboard
         app.kubernetes.io/part-of: tekton-dashboard
-        app.kubernetes.io/version: v0.24.1
+        app.kubernetes.io/version: v0.40.1
       name: tekton-dashboard
     spec:
       containers:
@@ -350,10 +275,11 @@ spec:
             - --logout-url=
             - --pipelines-namespace=tekton-pipelines
             - --triggers-namespace=tekton-pipelines
-            - --read-only=false
+            - --read-only=true
             - --log-level=info
             - --log-format=json
             - --namespace=
+            - --namespaces=
             - --stream-logs=true
             - --external-logs=
           env:
@@ -361,7 +287,7 @@ spec:
               valueFrom:
                 fieldRef:
                   fieldPath: metadata.namespace
-          image: registry.cn-hangzhou.aliyuncs.com/registry_mirrors/dashboard:v0.24.1
+          image: registry.cn-hangzhou.aliyuncs.com/registry_mirrors/dashboard:v0.40.1
           livenessProbe:
             httpGet:
               path: /health
@@ -373,11 +299,18 @@ spec:
             httpGet:
               path: /readiness
               port: 9097
+          securityContext:
+            allowPrivilegeEscalation: false
+            capabilities:
+              drop:
+                - ALL
+            runAsGroup: 65532
+            runAsNonRoot: true
+            runAsUser: 65532
+            seccompProfile:
+              type: RuntimeDefault
       nodeSelector:
         kubernetes.io/os: linux
-      securityContext:
-        runAsNonRoot: true
-        runAsUser: 65532
       serviceAccountName: tekton-dashboard
       volumes: []
 
@@ -390,6 +323,7 @@ metadata:
     app.kubernetes.io/component: dashboard
     app.kubernetes.io/instance: default
     app.kubernetes.io/part-of: tekton-dashboard
+    rbac.dashboard.tekton.dev/subject: tekton-dashboard
   name: tekton-dashboard-tenant
 roleRef:
   apiGroup: rbac.authorization.k8s.io
