--- a/03-tekton-advanced/02-task-with-workspace.yaml
+++ b/03-tekton-advanced/02-task-with-workspace.yaml
@@ -7,9 +7,22 @@ spec:
   - name: git-repo
     type: string
     description: Git repository to be cloned
+  - name: target
+    type: string
   workspaces:
   - name: source
   steps:
+  - name: write-message
+    image: alpine:3.16
+    script: |
+      #!/bin/sh
+      set -xe
+      if [ "$(workspaces.source.bound)" == "true" ] ; then
+        echo "Hello $(params.target)" > $(workspaces.source.path)/message
+        cat $(workspaces.source.path)/message
+      fi
+      echo "Mount Path: $(workspaces.source.path)"
+      echo "Volume Name: $(workspaces.source.volume)"
   - name: git-clone
     image: alpine/git:v2.36.1
     script: git clone -v $(params.git-repo) $(workspaces.source.path)/source
