--- a/03-tekton-advanced/06-pipeline-source-to-package.yaml
+++ b/03-tekton-advanced/06-pipeline-source-to-package.yaml
@@ -68,8 +68,8 @@ spec:
     name: source-2-package
   params:
     - name: git-url
-      #value: https://gitee.com/mageedu/spring-boot-helloWorld.git
-      value: http://code.gitlab.svc.cluster.local/root/spring-boot-helloWorld.git
+      value: https://gitee.com/mageedu/spring-boot-helloWorld.git
+        #value: http://code.gitlab.svc.cluster.local/root/spring-boot-helloWorld.git
   workspaces:
     - name: codebase
       volumeClaimTemplate:
