--- a/01-deploy-tekton/05-virtualservice-grafana.yaml
+++ b/01-deploy-tekton/05-virtualservice-grafana.yaml
@@ -2,10 +2,10 @@
 apiVersion: networking.istio.io/v1beta1
 kind: DestinationRule
 metadata:
-  name: tekton-dashboard
-  namespace: tekton-pipelines
+  name: grafana
+  namespace: istio-system
 spec:
-  host: tekton-dashboard
+  host: grafana
   trafficPolicy:
     tls:
       mode: DISABLE
@@ -13,7 +13,7 @@ spec:
 apiVersion: networking.istio.io/v1beta1
 kind: Gateway
 metadata:
-  name: tekton-dashboard-gateway
+  name: grafana-gateway
   namespace: istio-system
 spec:
   selector:
@@ -24,27 +24,25 @@ spec:
       name: http
       protocol: HTTP
     hosts:
-    - "tekton.magedu.com"
-    - "ci.magedu.com"
+    - "grafana.mykernel.cn"
 ---
 apiVersion: networking.istio.io/v1beta1
 kind: VirtualService
 metadata:
-  name: tekton-dashboard-virtualservice
-  namespace: tekton-pipelines
+  name: grafana-virtualservice
+  namespace: istio-system
 spec:
   hosts:
-  - "tekton.magedu.com"
-  - "ci.magedu.com"
+  - "grafana.mykernel.cn"
   gateways:
-  - istio-system/tekton-dashboard-gateway
+  - istio-system/grafana-gateway
   http:
   - match:
     - uri:
         prefix: /
     route:
     - destination:
-        host: tekton-dashboard
+        host: grafana
         port:
-          number: 9097
+          number: 3000
 ---
