--- a/04-tekton-pipeline-in-practise/01-s2i-no-push/02-task-source-build.yaml
+++ b/04-tekton-pipeline-in-practise/01-s2i-no-push/02-task-source-build.yaml
@@ -9,12 +9,15 @@ spec:
       description: The git repo that cloned onto the volume backing this workspace
   steps:
     - name: build
-      image: maven:3.8-openjdk-11-slim
+      image: maven:3.8.6-openjdk-11-slim
       workingDir: $(workspaces.source.path)/source
       volumeMounts:
         - name: m2
           mountPath: /root/.m2
-      script: mvn clean install
+      script: |
+        which mvn
+        #mvn clean install
+        mvn -B -D skipTests clean package
   volumes:
     - name: m2
       persistentVolumeClaim:
