--- a/04-tekton-pipeline-in-practise/01-s2i-no-push/03-task-build-image.yaml
+++ b/04-tekton-pipeline-in-practise/01-s2i-no-push/03-task-build-image.yaml
@@ -17,7 +17,7 @@ spec:
     - name: source
   steps:
     - name: build-and-push-image
-      image: gcr.io/kaniko-project/executor:debug
+      image: registry.cn-hangzhou.aliyuncs.com/registry_mirrors/executor:debug
       securityContext:
         runAsUser: 0
       command:
