--- a/04-tekton-pipeline-in-practise/02-s2i-push-to-dockerhub/03-task-build-image.yaml
+++ b/04-tekton-pipeline-in-practise/02-s2i-push-to-dockerhub/03-task-build-image.yaml
@@ -20,7 +20,7 @@ spec:
       mountPath: /kaniko/.docker
   steps:
     - name: image-build-and-push
-      image: gcr.io/kaniko-project/executor:debug
+      image: registry.cn-hangzhou.aliyuncs.com/registry_mirrors/executor:debug
       securityContext:
         runAsUser: 0
       env:
