--- a/04-tekton-pipeline-in-practise/04-s2i-auto-deploy/08-pipelinerun-source-to-image.yaml
+++ b/04-tekton-pipeline-in-practise/04-s2i-auto-deploy/08-pipelinerun-source-to-image.yaml
@@ -1,7 +1,7 @@
 apiVersion: tekton.dev/v1beta1
 kind: PipelineRun
 metadata:
-  name: s2i-buildid-run-00002
+  name: s2i-buildid-run-00007
 spec:
   # serviceAccountName: default
   # serviceAccountNames:
@@ -14,10 +14,10 @@ spec:
     name: source-to-image
   params:
     - name: git-url
-      #value: https://gitee.com/mageedu/spring-boot-helloWorld.git
-      value: http://code.gitlab.svc.cluster.local/root/spring-boot-helloWorld.git
+      value: https://gitee.com/mageedu/spring-boot-helloWorld.git
+        #value: http://code.gitlab.svc.cluster.local/root/spring-boot-helloWorld.git
     - name: image-url
-      value: ikubernetes/spring-boot-helloworld
+      value: slcnx/spring-boot-helloworld
     - name: version
       value: v0.9.2
   workspaces:
