--- a/05-tekton-triggers/03-trigger-gitlab/02-gitlab-eventlistener-rbac.yaml
+++ b/05-tekton-triggers/03-trigger-gitlab/02-gitlab-eventlistener-rbac.yaml
@@ -12,8 +12,8 @@ metadata:
 rules:
   # Permissions for every EventListener deployment to function
   - apiGroups: ["triggers.tekton.dev"]
-    resources: ["eventlisteners", "triggerbindings", "triggertemplates"]
-    verbs: ["get"]
+    resources: ["interceptors","eventlisteners", "triggerbindings", "triggertemplates","*"]
+    verbs: ["get","list","watch"]
   - apiGroups: [""]
     # secrets are only needed for Github/Gitlab interceptors, serviceaccounts only for per trigger authorization
     resources: ["configmaps", "secrets", "serviceaccounts"]
@@ -41,8 +41,8 @@ metadata:
   name: tekton-triggers-gitlab-minimal
 rules:
   - apiGroups: ["triggers.tekton.dev"]
-    resources: ["clusterinterceptors"]
-    verbs: ["get", "list"]
+    resources: ["clusterinterceptors","clustertriggerbindings"]
+    verbs: ["get", "list","watch"]
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
