--- a/06-deploy-argocd/argo-rollouts/install.yaml
+++ b/06-deploy-argocd/argo-rollouts/install.yaml
@@ -14678,7 +14678,7 @@ spec:
         app.kubernetes.io/name: argo-rollouts
     spec:
       containers:
-      - image: quay.io/argoproj/argo-rollouts:v1.2.0
+      - image: registry.cn-hangzhou.aliyuncs.com/registry_mirrors/argo-rollouts:v1.2.0
         imagePullPolicy: Always
         livenessProbe:
           failureThreshold: 3
