--- a/06-deploy-argocd/argocd/02-argocd-dashboard-virtualservice.yaml
+++ b/06-deploy-argocd/argocd/02-argocd-dashboard-virtualservice.yaml
@@ -8,7 +8,7 @@ spec:
     app: istio-ingressgateway
   servers:
     - hosts:
-        - "argocd.magedu.com"
+        - "argocd.mykernel.cn"
       port:
         number: 80
         name: http
@@ -16,7 +16,7 @@ spec:
       tls:
         httpsRedirect: true
     - hosts:
-        - "argocd.magedu.com"
+        - "argocd.mykernel.cn"
       port:
         number: 443
         name: https
@@ -31,14 +31,14 @@ metadata:
   namespace: argocd
 spec:
   hosts:
-  - "argocd.magedu.com"
+  - "argocd.mykernel.cn"
   gateways:
   - istio-system/argocd-dashboard-gateway
   tls:
   - match:
     - port: 443
       sniHosts:
-      - argocd.magedu.com
+      - argocd.mykernel.cn
     route:
     - destination:
         host: argocd-server
